--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 			position: absolute;
 		}
 
+                html {
+                    overflow-x: none;
+                    -ms-touch-action: none;
+                    -ms-overflow-style: none;
+                    -ms-scroll-chaining: none;
+                }
+
+
 	</style>
 </head>
 <body>
